# projecto

./: # architectureDesign.md  .gitignore  CMakeLists.txt  CodeCoverage.cmake  README.md  architectureDesign.md
.github/workflows/: cmake.yml
design/: Architecure Design.md
docs/design/: architectureDesign.md  model.md  programFlow.md  softwareDesignDocument.md  userStories.md
docs/usage/: howToUseProjecto.md  projectCommandList.md  projectoCommandList.md
src/: CMakeLists.txt  main.cpp  task.cpp  task.h
src/controller/: cliParser.cpp  cliParser.h  cmdProjectView.h  cmdRoutineA.cpp  cmdRoutineA.h  cmdSetFocus.cpp  cmdSetFocus.h  cmdViewProject.cpp  cmdViewProject.h  command.h  commands.cpp  commands.h  dataLoader.cpp  dataLoader.h  initialiser.cpp  initialiser.h
src/model/: jsonData.cpp  jsonData.h  jsonDataInterface.cpp  jsonDataInterface.h  jsonDataUtility.cpp  jsonDataUtility.h  jsonReader.cpp  jsonReader.h  jsonWriter.cpp  jsonWriter.h  log.cpp  log.h  modelUtilities.cpp  modelUtilities.h  note.cpp  note.h  project.cpp  project.h  task.cpp  task.h  txtDataParser.h  txtDataUtility.cpp  txtDataUtility.h
src/view/: ansiMacros.h  main.cpp  projectView.cpp  projectView.h  viewDetail.cpp  viewDetail.h  viewProject.cpp  viewProject.h  viewTable.cpp  viewTable.h  viewTask.cpp  viewTask.h  viewTest  viewTest.cpp  viewUtilities.cpp  viewUtilities.h
tests/: CMakeLists.txt  dataReadingTest.cpp  noteTest.cpp  projectTest.cpp  taskTest.cpp  testProjectData1.json  viewUtilTest.cpp
tests/controllerTests/: cliParserTests.cpp  cmdSetFocusTests.cpp  cmdViewProjectTests.cpp  dataLoaderTests.cpp  initialiserTests.cpp
tests/modelTests/: jsonDataFunctionTests.cpp  jsonDataInterfaceTests.cpp  jsonDataTests.cpp  jsonReaderTests.cpp  logTests.cpp  modelUtilTests.cpp  projectTests.cpp  taskTests.cpp
tests/viewTests/: viewDetailTests.cpp  viewProjectTests.cpp  viewTableTests.cpp  viewUtilitiesTests.cpp
